# CppTemplateConan

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  conanfile.py  conanfile.txt  dir_51f60337a5995dc2de5a0e1b11c8e575.html  dir_51f60337a5995dc2de5a0e1b11c8e575_dep.map  dir_51f60337a5995dc2de5a0e1b11c8e575_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  graph_legend.html  index.html  math__lib_2CMakeLists_8txt.html  math__lib_8cpp.html  math__lib_8cpp__incl.dot  math__lib_8cpp__incl.map  math__lib_8cpp__incl.md5  math__lib_8h.html  math__lib_8h__dep__incl.dot  math__lib_8h__dep__incl.map  math__lib_8h__dep__incl.md5  math__lib_8h_source.html  namespacemathlib.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
.github/workflows/: documentation.yaml  ubuntu.yml  windows.yml
app/: CMakeLists.txt  main.cpp
cmake/: Tools.cmake
docs/: Doxyfile
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js
src/: CMakeLists.txt
src/math_lib/: CMakeLists.txt  math_lib.cpp  math_lib.h
test/: CMakeLists.txt  main.cpp
tools/: run-clang-tidy.py
